<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:gravity="center"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:maxLength="8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/face_image"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/height_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="8"
        android:gravity="center"
        android:hint="@string/hint_height"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit" />

    <EditText
        android:id="@+id/weight_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="8"
        android:gravity="center"
        android:hint="@string/hint_weight"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_edit" />

    <EditText
        android:id="@+id/sex_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="8"
        android:gravity="center"
        android:hint="@string/hint_sex"
        android:inputType="text"
        android:maxLength="8"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_edit" />

    <ImageView
        android:id="@+id/face_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/face_img" />

    <Button
        android:id="@+id/count_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="8"
        android:text="@string/count_btn"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/sex_edit"
        app:layout_constraintStart_toStartOf="@+id/sex_edit"
        app:layout_constraintTop_toBottomOf="@+id/sex_edit" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:text="RESULT"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/count_btn"
        android:layout_margin="6dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        app:layout_constraintBottom_toBottomOf="@+id/height_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        android:layout_marginBottom="6dp"
        app:layout_constraintStart_toEndOf="@+id/height_edit" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        app:layout_constraintBottom_toBottomOf="@+id/weight_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        android:layout_marginBottom="6dp"
        app:layout_constraintStart_toEndOf="@+id/weight_edit" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.1"
        android:text="@string/sex"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/sex_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sex_edit" />

    <TextView
        android:id="@+id/bmi_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="BMI"
        android:padding="12dp"
        android:layout_margin="6dp"
        android:textSize="24sp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/result_text"
        app:layout_constraintRight_toLeftOf="@+id/result_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/count_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>